<resources>
    <string name="app_name">BaseLibrary</string>
    <!--微信-->
    <string name="errcode_success">分享成功</string>
    <string name="errcode_cancel">取消分享</string>
    <string name="errcode_deny">分享被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="errcode_fail">分享失败</string>
    <string name="access_fail">授权失败</string>
    <string name="wx_no_installed">未安装微信</string>
    <string name="qq_no_installed">未安装QQ</string>
    <string name="button_ok">OK</string>
    <string name="error_common">出错了</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="msg_camera_framework_bug">对不起，扫描异常，请退出重新扫描</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="loading">正在加载中...</string>
    <string name="all_reply">全部回复(%1$d)</string>
    <string name="newest">最新</string>
    <string name="hotest">最热</string>
    <string name="quckest">最早</string>
    <string name="next">下一步</string>
    <string name="max_image_arrived">最多只能上传9张图片</string>

    <string name="pre_buy_tips">购买提示</string>
    <string name="last_score_tips">剩余积分</string>
    <string name="pay_score_tips">支付积分</string>
    <string name="pre_buy_info">因本次购买而产生的财富将由治趣以一定方式转交版权人</string>
    <string name="last_score">您当前的剩余积分：%1$d</string>
    <string name="buy_instance">立即购买</string>

    <string name="pay_confirm1"><![CDATA[您当前的剩余积分 : <font color="#ff6800">%1$s</font>]]></string>
    <string name="pay_confirm2"><![CDATA[购买病例需要支付积分 : <font color="#ff6800">%1$s</font>]]></string>
    <string name="pay_confirm3">因本次购买而产生的财富将由治趣以一定方式转交版权人</string>
    <string name="pay_confirm5"><![CDATA[积分不足,人民币支付 : <font color="#ff6800">%1$s元</font>]]></string>
    <string name="pay_confirm6"><![CDATA[购买课程需要支付积分 : <font color="#ff6800">%1$s</font>]]></string>


    <string name="pay_alert"><Data><![CDATA[<font color="#fd4731">* </font>提示 : 病例购买后将收藏进我的病例，请进入病例学习。]]></Data></string>
    <string name="pay_alert_course"><Data><![CDATA[<font color="#fd4731">* </font>提示 : 课程购买后将收藏进我的课程，请进入课程学习。]]></Data></string>
    <string name="pay_title">支付</string>
    <string name="pay_with_ali">支付宝支付</string>
    <string name="pay_with_weixin">微信支付</string>
    <string name="pay_result">购买%1$s元</string>
    <string name="pay_exception">购买失败,请重新购买</string>
    <string name="pay_success">购买成功</string>
    <string name="no_data1">暂时没有记录</string>

    <string name="error_network">请检查网络连接</string>
</resources>
